--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <nav>
                 <img class='logo' src="Images/logo.png.png"/>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">About</a></li>
-                    <li><a href="/">Services</a></li>
-                    <li><a href="/">Portfolio</a></li>
-                    <li><a href="/">Contact</a></li>
+                    <li><a href="/Portfolio">Home</a></li>
+                    <li><a href="/Portfolio">About</a></li>
+                    <li><a href="/Portfolio">Services</a></li>
+                    <li><a href="/Portfolio">Portfolio</a></li>
+                    <li><a href="/Portfolio">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-text">
@@ -168,10 +168,10 @@
                     <h1 class=""sub-title>Contact Me</h1>
                     <p>contact@example.com</p>
                     <div class="social-icons">
-                        <a href=""><i class="bx bxl-facebook"></i></a>
-                        <a href=""><i class="bx bxl-instagram"></i></a>
-                        <a href=""><i class="bx bxl-twitter"></i></a>
-                        <a href=""><i class="bx bxl-linkedin"></i></a>
+                        <a href="/Portfolio"><i class="bx bxl-facebook"></i></a>
+                        <a href="/Portfolio"><i class="bx bxl-instagram"></i></a>
+                        <a href="/Portfolio"><i class="bx bxl-twitter"></i></a>
+                        <a href="/Portfolio"><i class="bx bxl-linkedin"></i></a>
                     </div>
                 </div>
                 <div class="contact-left"></div>
